@@ -1,147 +1,132 @@
 package com.master.air.servlet;
 
-import com.master.air.dao.AnnonceDAO;
 import com.master.air.model.Annonce;
-
+import com.master.air.service.AnnonceService;
+import com.master.air.service.CategoryService;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.annotation.WebServlet;
 import jakarta.servlet.http.HttpServlet;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+
 import java.io.IOException;
-import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Optional;
 
 @WebServlet(name = "AnnonceUpdate", urlPatterns = {"/annonce/update"})
 public class AnnonceUpdateServlet extends HttpServlet {
 
+    private final AnnonceService annonceService = new AnnonceService();
+    private final CategoryService categoryService = new CategoryService();
+
     @Override
-    protected void doGet(HttpServletRequest request, HttpServletResponse response) 
+    protected void doGet(HttpServletRequest req, HttpServletResponse resp)
             throws ServletException, IOException {
-        
-        String idParam = request.getParameter("id");
-        
-        if (idParam == null || idParam.trim().isEmpty()) {
-            response.sendRedirect(request.getContextPath() + "/annonce/list");
+        String idParam = req.getParameter("id");
+        if (idParam == null || idParam.isBlank()) {
+            resp.sendRedirect(req.getContextPath() + "/annonce/list");
             return;
         }
-        
         try {
-            int id = Integer.parseInt(idParam);
-            AnnonceDAO dao = new AnnonceDAO();
-            Annonce annonce = dao.findById(id);
-            
-            if (annonce == null) {
-                request.setAttribute("error", "Annonce introuvable");
-                response.sendRedirect(request.getContextPath() + "/annonce/list");
+            Long id = Long.parseLong(idParam);
+            Optional<Annonce> annonceOpt = annonceService.getAnnonce(id);
+            if (annonceOpt.isEmpty()) {
+                req.getSession().setAttribute("error", "Annonce introuvable");
+                resp.sendRedirect(req.getContextPath() + "/annonce/list");
                 return;
             }
-            
-            request.setAttribute("annonce", annonce);
-            request.getRequestDispatcher("/WEB-INF/views/AnnonceUpdate.jsp").forward(request, response);
-            
+            req.setAttribute("annonce", annonceOpt.get());
+            req.setAttribute("categories", categoryService.findAll());
+            req.getRequestDispatcher("/WEB-INF/views/AnnonceUpdate.jsp").forward(req, resp);
         } catch (NumberFormatException e) {
-            response.sendRedirect(request.getContextPath() + "/annonce/list");
-        } catch (ClassNotFoundException | SQLException e) {
-            e.printStackTrace();
-            request.setAttribute("error", "Erreur lors de la récupération de l'annonce : " + e.getMessage());
-            request.getRequestDispatcher("/WEB-INF/views/error.jsp").forward(request, response);
+            resp.sendRedirect(req.getContextPath() + "/annonce/list");
         }
     }
 
     @Override
-    protected void doPost(HttpServletRequest request, HttpServletResponse response) 
+    protected void doPost(HttpServletRequest req, HttpServletResponse resp)
             throws ServletException, IOException {
-        
-        request.setCharacterEncoding("UTF-8");
-        
-        String idParam = request.getParameter("id");
-        String title = request.getParameter("title");
-        String description = request.getParameter("description");
-        String adress = request.getParameter("adress");
-        String mail = request.getParameter("mail");
-        
+        req.setCharacterEncoding("UTF-8");
+
+        String idParam = req.getParameter("id");
+        String title = req.getParameter("title");
+        String description = req.getParameter("description");
+        String adress = req.getParameter("adress");
+        String mail = req.getParameter("mail");
+        String categoryIdStr = req.getParameter("categoryId");
+
         List<String> errors = new ArrayList<>();
-        
-        if (idParam == null || idParam.trim().isEmpty()) {
-            errors.add("ID manquant");
+
+        Long annonceId = null;
+        try {
+            annonceId = Long.parseLong(idParam);
+        } catch (NumberFormatException e) {
+            errors.add("ID invalide");
         }
-        
+
         if (title == null || title.trim().isEmpty()) {
             errors.add("Le titre est obligatoire");
+        } else if (title.length() > 64) {
+            errors.add("Le titre ne doit pas depasser 64 caracteres");
         }
-        
         if (description == null || description.trim().isEmpty()) {
             errors.add("La description est obligatoire");
+        } else if (description.length() > 256) {
+            errors.add("La description ne doit pas depasser 256 caracteres");
         }
-        
         if (adress == null || adress.trim().isEmpty()) {
             errors.add("L'adresse est obligatoire");
         }
-        
         if (mail == null || mail.trim().isEmpty()) {
             errors.add("L'email est obligatoire");
         } else if (!mail.matches("^[A-Za-z0-9+_.-]+@(.+)$")) {
             errors.add("L'email n'est pas valide");
         }
-        
-        if (!errors.isEmpty()) {
-            request.setAttribute("errors", errors);
-            Annonce annonce = new Annonce();
+
+        Long categoryId = null;
+        if (categoryIdStr == null || categoryIdStr.isBlank()) {
+            errors.add("La categorie est obligatoire");
+        } else {
             try {
-                annonce.setId(Integer.parseInt(idParam));
+                categoryId = Long.parseLong(categoryIdStr);
             } catch (NumberFormatException e) {
-                // ignore
+                errors.add("Categorie invalide");
             }
+        }
+
+        if (!errors.isEmpty()) {
+            Annonce annonce = new Annonce();
+            annonce.setId(annonceId);
             annonce.setTitle(title);
             annonce.setDescription(description);
             annonce.setAdress(adress);
             annonce.setMail(mail);
-            request.setAttribute("annonce", annonce);
-            request.getRequestDispatcher("/WEB-INF/views/AnnonceUpdate.jsp").forward(request, response);
+            req.setAttribute("annonce", annonce);
+            req.setAttribute("errors", errors);
+            req.setAttribute("selectedCategoryId", categoryId);
+            req.setAttribute("categories", categoryService.findAll());
+            req.getRequestDispatcher("/WEB-INF/views/AnnonceUpdate.jsp").forward(req, resp);
             return;
         }
-        
+
         try {
-            int id = Integer.parseInt(idParam);
-            
-            AnnonceDAO dao = new AnnonceDAO();
-            Annonce existingAnnonce = dao.findById(id);
-            
-            if (existingAnnonce == null) {
-                errors.add("Annonce introuvable");
-                request.setAttribute("errors", errors);
-                request.getRequestDispatcher("/WEB-INF/views/error.jsp").forward(request, response);
-                return;
-            }
-            
-            existingAnnonce.setTitle(title);
-            existingAnnonce.setDescription(description);
-            existingAnnonce.setAdress(adress);
-            existingAnnonce.setMail(mail);
-            
-            boolean updated = dao.update(existingAnnonce);
-            
-            if (updated) {
-                request.getSession().setAttribute("success", "Annonce modifiée avec succès !");
-                response.sendRedirect(request.getContextPath() + "/annonce/list");
-            } else {
-                errors.add("Échec de la mise à jour");
-                request.setAttribute("errors", errors);
-                request.setAttribute("annonce", existingAnnonce);
-                request.getRequestDispatcher("/WEB-INF/views/AnnonceUpdate.jsp").forward(request, response);
-            }
-            
-        } catch (NumberFormatException e) {
-            errors.add("ID invalide");
-            request.setAttribute("errors", errors);
-            request.getRequestDispatcher("/WEB-INF/views/error.jsp").forward(request, response);
-        } catch (ClassNotFoundException | SQLException e) {
-            e.printStackTrace();
-            errors.add("Erreur lors de la mise à jour : " + e.getMessage());
-            request.setAttribute("errors", errors);
-            request.getRequestDispatcher("/WEB-INF/views/error.jsp").forward(request, response);
+            annonceService.updateAnnonce(annonceId, title.trim(), description.trim(),
+                    adress.trim(), mail.trim(), categoryId);
+            req.getSession().setAttribute("success", "Annonce modifiee avec succes !");
+            resp.sendRedirect(req.getContextPath() + "/annonce/list");
+        } catch (Exception e) {
+            errors.add("Erreur lors de la modification : " + e.getMessage());
+            Annonce annonce = new Annonce();
+            annonce.setId(annonceId);
+            annonce.setTitle(title);
+            annonce.setDescription(description);
+            annonce.setAdress(adress);
+            annonce.setMail(mail);
+            req.setAttribute("annonce", annonce);
+            req.setAttribute("errors", errors);
+            req.setAttribute("categories", categoryService.findAll());
+            req.getRequestDispatcher("/WEB-INF/views/AnnonceUpdate.jsp").forward(req, resp);
         }
     }
 }
